Fixed the navbar dropdown height on mobile

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -106,7 +106,7 @@ div.nav-right ul {
   }
 
   &.open {
-    height: 100px;
+    height: 135px;
   }
 }
 
